# Nemesis

./: .gitignore  CHANGELOG.md  README.md  push.sh  setup.cfg  setup.py  tox.ini  up_version.py
.github/workflows/: python-app.yml
archive/: note
lib/: Functions.py  Globals.py  Skipper.py
tests/: test_init.py
