[metadata]
name = nemesis-scan
author = Neo Machine
author_email = neomachine@proton.me
license = MIT
license_files = LICENSE
description = A tool for scanning urls
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = tool, url, scan, hacking

[options]
# packages = Nemesis
packages = find:
package_dir =
    = src
install_requires =
    requests >= 2.26.0
    beautifulsoup4 >= 4.9.3
    termcolor >= 1.1.0
    jsbeautifier >= 1.14.0
    urlextract >= 1.3.0
python_requires =
    >=3.8

[options.packages.find]
where = src
exclude = 
    archive
    pics
    tests

[options.entry_points]
console_scripts =
    Nemesis = Nemesis.Nemesis:main
